--- a/resources/CloudfrontCachePolicies.yml
+++ b/resources/CloudfrontCachePolicies.yml
@@ -3,7 +3,8 @@ Resources:
   #
   # Cloudfront Cache Policies
   #
-  # Lister les policies: aws cloudfront list-cache-policies  --profile prod --type custom --output yaml
+  # Lister les policies:
+  # aws cloudfront list-cache-policies --profile prod --type custom --output yaml
   # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cloudfront-cachepolicy-cachepolicyconfig.html
   #
   # Long Cache (1 year) + query strings + forwarded host
@@ -86,3 +87,48 @@ Resources:
             CookieBehavior: none
           EnableAcceptEncodingBrotli: true
           EnableAcceptEncodingGzip: true
+  #
+  # Response headers security
+  # Lister les policies:
+  # aws cloudfront list-response-headers-policies --profile prod --type managed --output yaml
+  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cloudfront-responseheaderspolicy-responseheaderspolicyconfig.html#cfn-cloudfront-responseheaderspolicy-responseheaderspolicyconfig-corsconfig
+  #
+  CacheResponseHeadersPolicy:
+    Type: AWS::CloudFront::ResponseHeadersPolicy
+    Properties:
+      ResponseHeadersPolicyConfig:
+        Comment: Vega ${sls:stage} Security and preflight
+        CorsConfig:
+          AccessControlAllowCredentials: false
+          AccessControlAllowHeaders:
+            Items:
+              - "*"
+          AccessControlAllowMethods:
+            Items:
+              - ALL
+          AccessControlAllowOrigins:
+            Items: ${vega:allowedOrigins}
+          AccessControlExposeHeaders:
+            Items:
+              - "*"
+          AccessControlMaxAgeSec: 86400
+          OriginOverride: true
+        #CustomHeadersConfig
+        Name: response-headers-${self:service}-${sls:stage}
+        SecurityHeadersConfig:
+          #ContentSecurityPolicy:
+          ContentTypeOptions:
+            Override: false
+          FrameOptions:
+            FrameOption: SAMEORIGIN
+            Override: false
+          ReferrerPolicy:
+            Override: false
+            ReferrerPolicy: strict-origin-when-cross-origin
+          StrictTransportSecurity:
+            AccessControlMaxAgeSec: 31536000
+            Override: false
+          XSSProtection:
+            ModeBlock: true
+            Override: false
+            Protection: true
