--- a/resources/Vpc.yml
+++ b/resources/Vpc.yml
@@ -1,5 +1,7 @@
 ---
 Resources:
+  # Subnet Group for MemoryDb
+  MemoryDbSubnetGroup: ${vega:memoryDbClusterSubnetGroup}
   #
   # VPC Inbound rules for Redis
   # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group-ingress.html#cfn-ec2-security-group-ingress-description
